# docopt2

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  codspeed.yml  docs.yml  fuzz.yml  mutation.yml  nightly.yml  publish.yml  scorecard.yml  zizmor.yml
benchmarks/: test_perf.py
docs/: getting-started.md  index.md
docs/assets/: check.txt  coercion.txt  diagnostic.txt  rich-help.txt
docs/concepts/: design-boundaries.md
docs/guides/: check.md  compat.md  completion.md  diagnostics.md  dispatch.md  examples.md  fmt.md  help.md  round-trip.md  stub.md  typed-results.md  usage-dsl.md
docs/reference/: check.md  cli.md  compat.md  completion.md  config-templates.md  dispatch.md  docopt.md  examples.md  exceptions.md  fmt.md  grammar.md  overview.md  stub.md
docs/stylesheets/: extra.css
examples/: cli.py  completion.py  dispatch.py  layered.py  naval_fate.py  rich_help.py  round_trip.py  typed.py
fuzz/: docopt.dict  fuzz_docopt.py
src/docopt2/: __init__.py  __main__.py  _compat.py  _completion.py  _core.py  _diagnostics.py  _errors.py  _fmt.py  _format.py  _generate.py  _help.py  _lint.py  _parser.py  _spellcheck.py  _stub.py  _typed.py  hypothesis.py
tests/: _strategies.py  conftest.py  test_choices.py  test_cli.py  test_coercion_diagnostics.py  test_compat.py  test_completion_vs_docopt.py  test_config.py  test_config_template.py  test_core_extra.py  test_diagnostics.py  test_dispatch_and_completion.py  test_divergences.py  test_docopt_original.py  test_docs_blocks.py  test_docs_fences.py  test_env.py  test_examples.py  test_extended_features.py  test_fmt.py  test_format.py  test_generate.py  test_getting_started.py  test_grammar_examples.py  test_help.py  test_hypothesis.py  test_import_cost.py  test_lint.py  test_near_miss.py  test_package.py  test_parse_tree.py  test_property_coercion.py  test_property_config.py  test_property_config_template.py  test_property_differential.py  test_property_extended.py  test_pydantic.py  test_readme.py  test_robustness.py  test_screenshots.py  (+4 more)
tests/corpus/: awkward_but_legal.txt  layered_config.txt  many_flags.txt  nested_subcommands.txt
tests/golden/: completion_bash.txt  completion_fish.txt  completion_nushell.txt  completion_powershell.txt  completion_zsh.txt
tests/typing_surface/: check_typed.py
tools/: mutation_report.py  regolden.py  screenshots.py  shell_check.py
